# JobApply

./: .env.example  .flake8  .gitignore  Makefile  PLAN.md  PROJECT.md  README.md  enrich_jobs.py  main.py  package.json  pyproject.toml  render.yaml  requirements.txt  setup.cfg
.github/workflows/: auto_apply.yml  ci.yml  daily_tailor.yml  monthly_cleanup.yml
api/: main.py  test_api.py  turso.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.jsx  api.js  index.css
auto_apply/: apply_runner.py  lever_apply.py  linkedin_apply.py
config/: h1b_sponsors.json  profile.json  recruiting_calendar.json  settings.yaml
dashboard/: app.py
design_handoff_jobapply_redesign/: JobApply Redesign.html  README.md
design_handoff_jobapply_redesign/components/: analytics-settings.jsx  app.jsx  data.js  job-drawer.jsx  jobs-view.jsx  sidebar.jsx  ui-kit.jsx
output/resumes/aarp_applied_analytics_intern/: cover_letter.txt
output/resumes/aawdc_software_engineering_summer_internship/: cover_letter.txt
output/resumes/abaka_ai_summer_research_intern/: cover_letter.txt
pipeline/: cover_letter.py  email_generator.py  email_sender.py  jd_fetcher.py  job_filter.py  jobright_enricher.py  llm_client.py  pdf_generator.py  resume_tailor.py
scrapers/: handshake_scraper.py  intern_list_scraper.py  jobright_minisite.py  linkedin_scraper.py  newgrad_jobs_scraper.py
scripts/: cleanup_stale_jobs.py  enrich_jobs.py  force_reseed_turso.py  pull_from_turso.py  refresh_h1b_sponsors.py  skip_phd_jobs.py
src/api/: main.py  test_api.py
src/auto_apply/: apply_runner.py  greenhouse_apply.py  lever_apply.py  linkedin_apply.py
src/pipeline/: cover_letter.py  email_finder.py  interview_prep.py  jd_fetcher.py  job_filter.py  llm_client.py  resume_tailor.py  sponsorship.py
src/scrapers/: jobright_minisite.py  linkedin_recruiter_scraper.py  linkedin_scraper.py
src/tracker/: tracker.py
tests/: test_email_finder.py  test_email_generator.py  test_email_sender.py  test_health_api.py  test_interview_prep.py  test_job_filter.py  test_jobright_minisite.py  test_newgrad_scraper.py  test_notifications.py  test_recruiter_api.py  test_recruiter_tracker.py  test_reminders.py  test_settings_api.py  test_sponsorship.py  test_timeline_api.py
tracker/: applications.db  tracker.py
web/: index.html
web/src/: App.jsx  api.js  theme.js
(+296 files in other folders)
