[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobapply"
version = "2.0.0"
description = "Automated AI/ML internship pipeline: scrape, score, tailor resumes, cold-email recruiters, track outcomes."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools]
# src layout: application packages live under src/ (keeps the repo root tidy).
# Package names stay top-level (api, pipeline, …) — `from pipeline.x import y`
# is unchanged. Run `pip install -e .` so the packages resolve from any working
# directory (needed for `uvicorn api.main:app`, pytest, and the scripts).
# The CLI entry point is `python main.py` (it bootstraps src/ onto sys.path).

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*", "pipeline*", "scrapers*", "tracker*", "auto_apply*"]

[tool.setuptools.dynamic]
# Single source of truth for runtime deps — render.yaml and GHA still install
# via `pip install -r requirements.txt`.
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
